--- a/lib/l10n/intl_ko_kr.json
+++ b/lib/l10n/intl_ko_kr.json
@@ -2,5 +2,5 @@
   "common.levelup.status": "레벨업 상태",
   "common.ok": "확인",
   "page_home_title": "테스트 타이틀"
-  "git_add_title": "깃 에서 추가 한 내용"
+  "git_add_title": "깃 에서 추가 한 내용2"
 }
